# semantic_segmentation_walker

./: CMakeLists.txt  README.md  package.xml
config/: scan_to_image.yaml
config/rviz/: semantic_seg.rviz
include/semantic_seg/: CaffeWrapper.h  scan_to_image.h
launch/: semantic_seg.launch
src/: CaffeWrapper.cpp  scan_to_image.cpp  semantic_seg_node.cpp
