<?xml version="1.0"?>
<package>
  <name>semantic_segmentation</name>
  <version>0.0.0</version>
  <description>Semantic segmentation of point clouds.</description>
  <license>BSD</license>
  <maintainer email="o.o.kutkina@gmail.com">Oksana Kutkina</maintainer>
  <author>Oksana Kutkina</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
   
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cmake_modules</run_depend> 
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
